# openclawwin

./: .gitignore  README.md  pyproject.toml
app/: __init__.py
app/memory/: __init__.py
docs/: .env.example  Caddyfile  README.md  docker-compose.yml  memory_architecture.md  nginx-tls-proxy.conf
myclaw/: .gitignore  README.md  package-lock.json  package.json
myclaw/.github/workflows/: test.yml
myclaw/docs/: approval.md  audit.md  channel_security.md  channels.md  cli.md  compaction.md  daemon.md  events.md  gateway_api.md  memory_architecture.md  memory_proposals.md  security.md  storage.md
myclaw/sample-skills/weather/: SKILL.md
myclaw/scripts/: check-syntax.js  memory-smoke.js
myclaw/src/agent/: index.js  loop.js
myclaw/src/approval/: approval.test.js  broker.js  index.js  models.js
myclaw/src/audit/: audit.test.js  index.js  log.js  models.js
myclaw/src/channels/: bridge.js  channels.test.js  httpWebhook.js  index.js  models.js  policy.js  router.js  sessionRegistry.js  testBridge.js
src/openclaw_memory/: __init__.py  cli.py  context_budget.py  layers.py  markdown_store.py  models.py  parser.py  policy.py  router.py  sqlite_fts_store.py  store.py  stores.py
src/openclaw_runtime/: __init__.py  agent.py  alerts.py  approval.py  audit.py  cli.py  gateway.py  hooks.py  messaging.py  nodes.py  policies.py  prompt.py  protocol.py  queue.py  rbac.py  sandbox.py  scheduler.py  security.py  sessions.py  skills.py  tools.py
tests/: test_memory_architecture.py  test_memory_layers.py  test_openclaw_runtime.py  test_prompt_memory_injection.py  test_rbac.py
(+82 files in other folders)
